# internal/framework/routes/Routes.go
@@ -9,4 +9,5 @@ import (
 func NewRoutes (e *echo.Group, ctrl *controller.Controller, middleware ...echo.MiddlewareFunc) {
 	NewAuthRoutes(e, ctrl.Auth)
 	NewPatientRoutes(e, ctrl.Patient, middleware...)
+	NewOutPatientRoutes(e, ctrl.OutPatient, middleware...)
 }
